test/spec/br.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/br.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/br.wast:342:12: type mismatch of br value. got void, expected i32
    (block (br 0) (i32.const 1))
           ^
assert_invalid error:
  third_party/testsuite/br.wast:348:18: type mismatch of br value. got i64, expected i32
    (block (br 0 (i64.const 1)) (i32.const 1))
                 ^
assert_invalid error:
  third_party/testsuite/br.wast:354:36: label variable out of range (max 1)
  (module (func $unbound-label (br 1)))
                                   ^
assert_invalid error:
  third_party/testsuite/br.wast:358:57: label variable out of range (max 3)
  (module (func $unbound-nested-label (block (block (br 5)))))
                                                        ^
assert_invalid error:
  third_party/testsuite/br.wast:362:34: label variable out of range (max 1)
  (module (func $large-label (br 0x100000001)))
                                 ^^^^^^^^^^^
64/64 tests passed.
;;; STDOUT ;;)
